force-app/main/default/objects/Parent__c/fields/Annual_income__c.field-meta.xml
<CustomField>
    <fullName>Annual_income__c</fullName>
    <label>Annual Salary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>