force-app/main/default/objects/Parent__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <label>Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Public</fullName>
            </value>
            <value>
                <fullName>No Job</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>