force-app/main/default/objects/Parent__c/listViews/parents.listView-meta.xml
<ListView>
    <fullName>parents</fullName>
    <columns>NAME</columns>
    <columns>Job__c</columns>
    <columns>Annual_income__c</columns>
    <columns>Aadhar_Number__c</columns>
    <columns>Parental__c</columns>
    <filterScope>Mine</filterScope>
    <label>parents</label>
</ListView>